--- a/www/assets/css/custom.css
+++ b/www/assets/css/custom.css
@@ -1,3 +1,10 @@
 .separate{
 		border-left: 1px #333333 dashed;
 }
+
+.separatedetail{
+		border-left: 1px #333333 dashed;
+		border-right: 1px #333333 dashed;
+		border-top: 1px #333333 dashed;
+		border-bottom: 1px #333333 dashed;
+}
